[project]
name = "anychat"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic-gradio",
    "cerebras-gradio",
    "dashscope-gradio",
    "fal-gradio",
    "fireworks-gradio",
    "gemini-gradio>=0.0.1",
    "gradio-webrtc>=0.0.23",
    "gradio>=5.9.1",
    "groq-gradio>=0.0.2",
    "hyperbolic-gradio>=0.0.4",
    "mistral-gradio",
    "nvidia-gradio",
    "openai-gradio>=0.0.4",
    "perplexity-gradio>=0.0.1",
    "python-dotenv>=1.0.1",
    "replicate-gradio",
    "sambanova-gradio>=0.1.9",
    "together-gradio>=0.0.1",
    "websockets>=14.1",
    "xai-gradio>=0.0.2",
    "numba>=0.60.0",
    "llvmlite>=0.43.0",
    "librosa>=0.10.2.post1",
    "twilio>=9.4.1",
    "playai-gradio",
    "lumaai-gradio",
    "cohere-gradio",
    "ai-gradio[deepseek,crewai,hyperbolic,openai,gemini,smolagents,groq]==0.2.3",
]

[tool.uv.sources]
anthropic-gradio = { git = "https://github.com/AK391/anthropic-gradio.git" }
fireworks-gradio = { git = "https://github.com/AK391/fireworks-ai-gradio.git" }
cerebras-gradio = { git = "https://github.com/gradio-app/cerebras_gradio.git" }
nvidia-gradio = { git = "https://github.com/AK391/nvidia-gradio.git" }
dashscope-gradio = { git = "https://github.com/AK391/dashscope-gradio.git" }
fal-gradio = { git = "https://github.com/AK391/fal-gradio.git" }
replicate-gradio = { git = "https://github.com/AK391/replicate-gradio.git" }
mistral-gradio = { git = "https://github.com/AK391/mistral-gradio.git" }
playai-gradio = { git = "https://github.com/AK391/playai-gradio.git" }
lumaai-gradio = { git = "https://github.com/AK391/lumaai-gradio.git" }
cohere-gradio = { git = "https://github.com/AK391/cohere-gradio.git" }

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E501"] # line too long (black is taking care of this)
line-length = 119
fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]

[tool.isort]
profile = "black"
line_length = 119

[tool.black]
line-length = 119
